--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-paper": "^5.12.3"
+    "react-native-paper": "^5.12.3",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
