--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.1.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.14",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-paper": "^5.12.3",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
