--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.3",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
