--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-vector-icons": "^10.1.0"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
