ref: changed the code to check the api call causing api to fail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@hooks/*": ["hooks/*"],
       "@screens/*": ["screens/*"],
       "@helpers/*": ["helpers/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@stores/*": ["stores/*"]
     }
   }
 }
