--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.0.7",
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-query": "^5.52.3",
     "axios": "^1.7.3",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
