--- a/package.json
+++ b/package.json
@@ -11,24 +11,34 @@
   "dependencies": {
     "@dev-plugins/react-query": "^0.0.7",
     "@react-native-community/datetimepicker": "^8.1.1",
-    "@react-navigation/native": "^6.1.17",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/elements": "^1.3.31",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.29",
     "@tanstack/react-query": "^5.52.3",
     "axios": "^1.7.3",
     "expo": "~51.0.14",
+    "expo-keep-awake": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-paper": "^5.12.3",
     "react-native-paper-dropdown": "^1.0.7",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-unimodules": "^0.14.10",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-navigation/native": "^6.1.18",
     "@types/react": "~18.2.45",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
