--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dev-plugins/react-query": "^0.0.7",
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.3.29",
